--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,8 +11,10 @@
 @import 'includes/_images.scss';
 @import 'includes/_indents.scss';
 @import 'includes/_banner.scss';
+@import 'includes/_sidebar.scss';
 @import 'includes/_single-post.scss';
 @import 'includes/_typography.scss';
+
 
 
 body{
