--- a/scss/includes/_buttons.scss
+++ b/scss/includes/_buttons.scss
@@ -1,9 +1,5 @@
 .btn{
-  height: 60px;
-  padding: 20px 45px;
-  border-radius: 5px;
-  text-align: center;
-  font: 700 14px/22px "Raleway";
+  margin-top: 20px;
   &-transp{
     margin: 100px 0;
     border: 1px solid rgba(38, 38, 38, 0.3);
@@ -23,6 +19,7 @@
       background-color: #F6E2E3;
     }
   }
+
 }
 .btn-nav{
   border: 1px solid #ffffff;
