--- a/scss/includes/_buttons.scss
+++ b/scss/includes/_buttons.scss
@@ -1,3 +1,31 @@
+.info-button{
+  display: block;
+  min-width: 190px;
+  padding: 0 20px;
+  color: #ffea00;
+  background: #424147;
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 30px;
+
+
+}
+.btn-style {
+  position: relative;
+  left: 100%;
+  display: block;
+  color: #fff;
+  background: black;
+  font-size: 15px;
+  border: none;
+  border-bottom: 2px solid ;
+  padding: 0 13px;
+  line-height: 37px;
+  transform: translate(-100%);
+
+}
+
+
 .btn{
   margin-top: 20px;
   &-transp{
