--- a/scss/includes/_sidebar.scss
+++ b/scss/includes/_sidebar.scss
@@ -1,7 +1,64 @@
 .sidebar{
-  height: 500px;
   width: 29.1%;
-  background: #000;
   float: right;
+  padding-top: 85px;
+  padding-bottom: 25px;
 
+}
+.search-block{
+  position: relative;
+  padding: 20px 10.5%;
+  background-color: #403f46;
+  input{
+    display: block;
+    color: red;
+    width:  100%;
+    border: none;
+    padding: 0 45px 0 20px;
+    line-height: 28px;
+   // color: #737373;
+    font-size: 18px;
+    border-radius: 28px;
+  }
+  .btn-search{
+    background: url(../img/search-icon.png) no-repeat center center;
+    position: absolute;
+    width: 23px;
+    height: 22px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: calc(10.5% + 15px);
+    border: none;
+
+
+  }
+}
+.sidebar-block{
+  background-color: #403f46;
+  margin-top: 30px;
+  padding: 30px 7.1% 35px;
+  .item-list{
+    padding-top: 25px;
+    li{
+      position: relative;
+      width: 50%;
+      display: inline-block;
+      vertical-align: middle;
+      padding: 5px 15px 5px 45px;
+      margin-bottom: 15px;
+
+      &:before{
+        position: absolute;
+        content: '';
+        display: block;
+        width: 30px;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: url(../img/arrow.png) no-repeat center center #ffea00;
+
+      }
+    }
+
+  }
 }
