--- a/scss/includes/_sidebar.scss
+++ b/scss/includes/_sidebar.scss
@@ -37,6 +37,9 @@
   background-color: #403f46;
   margin-top: 30px;
   padding: 30px 7.1% 35px;
+  .s-heading{
+    color: #ffeb00;
+  }
   .item-list{
     padding-top: 25px;
     li{
@@ -60,5 +63,41 @@
       }
     }
 
+  }
+}
+.posts-list{
+  margin-top: 25px;
+  li{
+    display: block;
+    margin-bottom: 25px;
+    font-size: 0;
+  }
+  .img-block{
+    width: 100px;
+    height: 70px;
+    display: inline-block;
+    vertical-align: top;
+    img{
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .post-text{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10px;
+    width: calc(100% - 110px);
+  }
+  .side-title{
+    font-size: 16px;
+    line-height:20px;
+
+  }
+  .bottom-title{
+    color: #ffeb00;
+    .post-date{
+
+    }
   }
 }
